# practice

./: .gitignore
practise/3dimension_boolnean_display/code/: Data.cpp  Data.h  DatastructureHead.h  Det.h  Direction.cpp  Direction.h  Face.cpp  Face.h  FaceContainFace.cpp  FaceContainFace.h  FindNearTriangle.cpp  FindNearTriangle.h  Flat.cpp  Flat.h  Functor.cpp  Functor.h  FunctorHead.h  HassNode.h  Line.cpp  Line.h  Makefile  Planar.cpp  Planar.h  Point.cpp  Point.h  STLHead.h  Segment.cpp  Segment.h  SegmentIntersection.cpp  SegmentIntersection.h  Tol.cpp  Tol.h  TriangleIntersection.cpp  TriangleIntersection.h  Triangulation.cpp  Triangulation.h  Yinset.cpp  Yinset.h  YinsetContainTriangle.cpp  YinsetContainTriangle.h  (+8 more)
practise/3dimension_boolnean_display/document/: design_document.aux  design_document.tex  design_document.toc
practise/3dimension_boolnean_display/insight/: Makefile  README.md
practise/3dimension_boolnean_display/insight1/: compile_commands.json
practise/3dimension_boolnean_display/ppt/: ppt.aux  ppt.nav  ppt.out  ppt.tex  ppt.toc  presentation.txt
practise/Birthday/: Classmates.txt  Teachers.txt  family.txt
practise/beautiful/: YtanFunction.h  YtanFunctionTEST.cpp  constexprFunction.h  initiallist_expansion.cpp  lambda_determine.cpp  perfectForwardInLambda.cpp  raw_string.cpp  std.h  variadic.cpp  variant.cpp
practise/boolean operation/1/: BalanceTree.h  Line.cpp  Line.h  Point.cpp  Point.h  a.out  face.h  intersection.cpp  intersection.h  main  main.cpp  test.input  text  text.cpp
practise/boolean operation/2 (1)/: 1-complement.output  1-join-2.output  1-meet-2.output  Handbook  mickey-comlement.output  panda-complement.output  panda-join-mickey.output
practise/cpp_new_feature/: POI.cpp  a.out  auto.cpp  bool_conversion.cpp  class_deduce.cpp  concept.cpp  condition.cpp  condition_variable.cpp  const_ref.cpp  constexpr.cpp  defdecl.cpp  empty_istream.cpp  enum_class.cpp  future.cpp  initiallist_expansion.cpp  innertemplate.cpp  istream.txt  lambda_template.cpp  literal_op.cpp  main  main.cpp  move.cpp  move_detect.cpp  mutex.cpp  nullptr_chose.cpp  paramentref.cpp  pefectForward.cpp  referror.cpp  referror2.cpp  specialization1.cpp  specialization2.cpp  std.h  string_max_size.cpp  templatePoint.cpp  template_deduction.cpp  template_parament_conversion.cpp  template_template.cpp  unique_lock.cpp  using.cpp  variadic.cpp  (+2 more)
practise/daliy practise/Scientific_Computing_With_Machine/cmake/src/: CMakeLists.txt  ExampleConfig.h.in  example.cpp
practise/daliy practise/Scientific_Computing_With_Machine/cmake/src/Rand/: CMakeLists.txt  myrand.cpp  myrand.h
practise/data_analysis/: spline.rar
practise/data_analysis/spline/代码2/codes/: CMakeLists.txt  readme.md
practise/data_analysis/spline/代码2/codes/doc/: CMakeLists.txt  doc.tex
practise/data_analysis/spline/代码2/codes/include/: #Polynomial.H#  CardinalBspline.H  Config.H  InterpConditions.H  NewtonInterp_Portable.H  Polynomial.H  Spline.H  TriangleTable.H  Vec.h
practise/data_analysis/spline/代码2/codes/main/: Assignment.cpp  CMakeLists.txt  SnippetsForAssignment.cpp
practise/data_analysis/spline/代码2/codes/test/: CMakeLists.txt  testCardinal.cpp  testNewton_P.cpp  testPolty.cpp  testSpline.cpp
practise/idea-test/: 3  cpuAbility.cpp  less<array>.cpp  main  staticfunction_and_externlinkersource.cpp
practise/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opencv  opencv_example  opencvtest.cpp
(+2099 files in other folders)
